<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gadgetsmend.cricketscorecounter.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/teamName"
                android:text="@string/teamAName"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/textSize"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_height="56dp"
                android:layout_marginBottom="@dimen/margin"
                android:id="@+id/displayScoreTeamA"
                android:text="@string/initialScore"
                android:textAlignment="center"
                android:textSize="40sp"/>
            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:text="@string/run1"
                android:background="@android:color/holo_orange_dark"
                android:onClick="addOneForTeamA"/>
            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/run2"
                android:onClick="addTwoForTeamA"/>
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/run3"
                android:onClick="addThreeForTeamA"/>
            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/run4"
                android:onClick="addFoureForTeamA"/>
            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/run6"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:onClick="addSixForTeamA"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray"
            android:padding="@dimen/marginPadding"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/teamBName"
                android:text="@string/teamBName"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_height="56dp"
                android:layout_marginBottom="@dimen/margin"
                android:id="@+id/displayScoreTeamB"
                android:text="@string/initialScore"
                android:textAlignment="center"
                android:textSize="40sp"/>
            <Button
                android:id="@+id/buttonTeamB1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/run1"
                android:onClick="addOneForTeamB"/>
            <Button
                android:id="@+id/buttonTeamB2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/run2"
                android:onClick="addTwoForTeamB"/>
            <Button
                android:id="@+id/buttonTeamB3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/run3"
                android:onClick="addThreeForTeamB"/>
            <Button
                android:id="@+id/buttonTeamB4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/run4"
                android:onClick="addFoureForTeamB"/>
            <Button
                android:id="@+id/buttonTeamB6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/marginTopBottom"
                android:layout_marginBottom="@dimen/marginTopBottom"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/run6"
                android:onClick="addSixForTeamB"/>
        </LinearLayout>
    </LinearLayout>
    <Button android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginPadding"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/reset"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:layout_marginBottom="32dp" />
</RelativeLayout>